namespaces/live-1.cloud-platform.service.justice.gov.uk/maintenance-pages/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maintenance-pages-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: maintenance-pages-app
  template:
    metadata:
      labels:
        app: maintenance-pages-app
    spec:
      containers:
      - name: sinatra-app
        image: ministryofjustice/cloud-platform-maintenance-pages:1.0
        ports:
        - containerPort: 4567
